<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewRowHead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:text="@string/empty_title_text"
        android:textColor="#C31E1E"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewRowNote"
        app:layout_constraintEnd_toStartOf="@+id/rowDeleteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRowNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        android:text="@string/empty_note_text"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/rowDeleteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRowHead" />

    <Button
        android:id="@+id/rowDeleteButton"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:text="@string/delete_button_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/CardView.Dark"
        />
</androidx.constraintlayout.widget.ConstraintLayout>